--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,9 @@
     "action": {
         "default_popup": "popup.html"
       },
+    "background": {
+      "service_worker": "background.js"
+    },  
+    "options_page": "options.html",
     "permissions": ["activeTab", "scripting", "storage", "clipboardWrite"]
   }
