Hide the notification box

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "下载宝",
-    "description": "下载",
+    "name": "XiaZai-Bao",
+    "description": "XiaZai",
     "version": "1.0",
     "manifest_version": 3,
     "action": {
